# numericspp

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ReadMe.md
notes/: CMakeLists.txt  ReadMe.md
notes/lectures/: CMakeLists.txt  main.tex
notes/lectures/src/: lecture1-solomon.tex  lecture1.tex  lecture2.tex  lecture3.tex  lecture4.tex  main.tex
notes/lectures/src/6S955/: lecture1-solomon.tex
src/: CMakeLists.txt  main.cpp
src/modules/: Float.ixx  Yellow.ixx
